// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides password quality by default 1`] = `
<div
  style={
    Object {
      "marginBottom": "16px",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <label
      htmlFor="test"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Password
       
      <span
        style={
          Object {
            "color": "red",
          }
        }
      >
         *
      </span>
    </label>
    <input
      id="test"
      maxLength={30}
      name="test"
      onChange={[Function]}
      placeholder={undefined}
      required={true}
      style={undefined}
      type="password"
      value="Uisi38#8iad"
    />
  </div>
</div>
`;

exports[`shows password quality when enabled and a password is entered 1`] = `
<div
  style={
    Object {
      "marginBottom": "16px",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <label
      htmlFor="test"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Password
       
      <span
        style={
          Object {
            "color": "red",
          }
        }
      >
         *
      </span>
    </label>
    <input
      id="test"
      maxLength={30}
      name="test"
      onChange={[Function]}
      placeholder={undefined}
      required={true}
      showQuality={true}
      style={undefined}
      type="password"
      value="Uisi38#8iad"
    />
  </div>
</div>
`;
